--- a/www/index.html
+++ b/www/index.html
@@ -6,6 +6,7 @@
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/main.css" />
+        <link href="kendo/styles/kendo.mobile.all.min.css" rel="stylesheet">
         <title>Selfie Cause</title>
     </head>
     <body>
