--- a/www/index.html
+++ b/www/index.html
@@ -45,6 +45,7 @@
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript" src="js/lib.js"></script>
+        <script src="kendo/js/kendo.all.min.js"></script>
         <script type="text/javascript">
             app.initialize();
         </script>
