--- a/www/index.html
+++ b/www/index.html
@@ -1,6 +1,15 @@
 ﻿<!DOCTYPE html>
 <html>
     <head>
+
+    <meta name="format-detection" content="telephone=no">
+        <meta name="msapplication-tap-highlight" content="no">
+        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
+        <script src="https://sdk.amazonaws.com/js/aws-sdk-2.193.0.min.js"></script>
+        <link rel="stylesheet" type="text/css" href="css/index.css">
+
+
+    
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta name="format-detection" content="telephone=no" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
