--- a/www/index.html
+++ b/www/index.html
@@ -19,7 +19,7 @@
         <title>Selfie Cause</title>
     </head>
     <body>
-        <div id="notification" style="position:fixed; top: -20px; width:100%; text-align:center; padding:8px; font-size:12px;"></div>
+        <div id="notification" style="position:fixed; top: -20px; width:100%; text-align:center; padding:8px; font-size:12px; z-index:10000;"></div>
         <div class="app main-wrap" id="wrapper">
             <div id="main-placeholder">
                 <div id="deviceready" class="blink">
